# tock

./: .gitmodules  Cargo.toml
arch/rv32i/src/: lib.rs  pmp.rs  syscall.rs
boards/esp32-c3-devkitM-1/src/: main.rs
boards/hifive1/src/: main.rs
boards/hifive_inventor/src/: main.rs
boards/litex/arty/src/: main.rs
boards/litex/sim/: Cargo.toml  layout.ld
boards/litex/sim/src/: main.rs
boards/opentitan/earlgrey/: Cargo.toml
boards/opentitan/earlgrey-cw310/src/: main.rs
boards/opentitan/earlgrey/src/: lib.rs
boards/qemu_rv32_virt/: Cargo.toml  layout.ld
boards/qemu_rv32_virt/src/: lib.rs  main.rs
boards/redboard_redv/src/: main.rs
boards/swervolf/src/: main.rs
capsules/foreign/demo/: Cargo.toml  Makefile  build.rs  demo.encapfn.toml  layout_litex_sim.ld  layout_qemu_rv32i_virt.ld
capsules/foreign/demo/c_src/: demo.c  demo.h  efdemo_tbf.c
capsules/foreign/demo/src/: lib.rs
chips/earlgrey/src/: epmp.rs
chips/qemu_rv32_virt_chip/src/: chip.rs
encapfn-tock/: Cargo.toml
encapfn-tock/encapfn_c_rt/: EncapfnTBF.mk  encapfn_layout.ld  init_cortexm.S  init_riscv32.S
encapfn-tock/src/: binary.rs  lib.rs  rv32i_c_rt.rs
kernel/src/: config.rs  syscall.rs
libraries/tock-tbf/src/: lib.rs
