[package]
name = "encapfn-tock"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encapfn = { path = "../encapfn/encapfn" }
kernel = { path = "../kernel" }
tock-tbf = { path = "../libraries/tock-tbf" }
rv32i = { path = "../arch/rv32i" }